--- a/CESdevicesim/mainwindow.ui
+++ b/CESdevicesim/mainwindow.ui
@@ -228,14 +228,14 @@
    <widget class="QSpinBox" name="batterySpinBox">
     <property name="geometry">
      <rect>
-      <x>50</x>
-      <y>480</y>
+      <x>210</x>
+      <y>410</y>
       <width>42</width>
       <height>25</height>
      </rect>
     </property>
     <property name="minimum">
-     <number>1</number>
+     <number>0</number>
     </property>
     <property name="maximum">
      <number>100</number>
@@ -247,9 +247,9 @@
    <widget class="QProgressBar" name="batteryBar">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>480</y>
-      <width>118</width>
+      <x>110</x>
+      <y>440</y>
+      <width>231</width>
       <height>23</height>
      </rect>
     </property>
@@ -258,6 +258,89 @@
     </property>
     <property name="value">
      <number>100</number>
+    </property>
+   </widget>
+   <widget class="QProgressBar" name="connectionBar">
+    <property name="geometry">
+     <rect>
+      <x>110</x>
+      <y>330</y>
+      <width>231</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::LeftToRight</enum>
+    </property>
+    <property name="minimum">
+     <number>1</number>
+    </property>
+    <property name="maximum">
+     <number>8</number>
+    </property>
+    <property name="value">
+     <number>8</number>
+    </property>
+    <property name="format">
+     <string>%p</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="ConnectionLabel">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>280</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Connection</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="BatteryLabel">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>390</y>
+      <width>81</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Battery Charge</string>
+    </property>
+   </widget>
+   <widget class="QSpinBox" name="connectionSpinBox">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>300</y>
+      <width>42</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <number>0</number>
+    </property>
+    <property name="maximum">
+     <number>7</number>
+    </property>
+    <property name="value">
+     <number>7</number>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="replaceBattery">
+    <property name="geometry">
+     <rect>
+      <x>190</x>
+      <y>470</y>
+      <width>91</width>
+      <height>24</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Replace Battery</string>
     </property>
    </widget>
   </widget>
